--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </div>
         <div class="row">
             <a href="tree/" class="clickable-div"><img src="tree/treelogo.png" alt="Quake Tree Image">Quake Tree</a>
+            <a href="wad/" class="clickable-div"><img src="wad/wad.png" alt="WADCleaver Image">WADCleaver</a>
         </div>
         <!-- Add more .row as needed -->
     </div>
